added assignment for index2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <script src="scripts/getdates.js" defer></script>
   </head>
   <body>
     <header>
@@ -49,7 +50,7 @@
               journey to fulfilling my dream of being a developer.
             </p>
 
-            <img src="/images/profile.webp" alt="Profile photo" />
+            <img src="images/profile.webp" alt="Profile photo" />
           </div>
 
           <div class="country">
@@ -58,7 +59,7 @@
           </div>
 
           <div class="location-grid">
-            <img src="/images/flag.jpg" alt="Flag of Nigeria" />
+            <img src="images/flag.jpg" alt="Flag of Nigeria" />
             <p>
               Nigeria, an African country on the Gulf of Guinea, has many
               natural landmarks and wildlife reserves. Protected areas such as
@@ -92,6 +93,5 @@
       </p>
       <p id="lastModified"></p>
     </footer>
-    <script src="/scripts/getdates.js"></script>
   </body>
 </html>
