fix css validation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals" />
+    <meta name="description" content="This is a intro to Sunday Victor Okoromi WDD 131 - Dynamic Web Fundamentals journey
+    to becoming a software developer through BYU Pathway" />
     <meta name="author" content="Sunday Victor Okoromi" />
     <title>WDD 131 - Dynamic Web Fundamentals - Sunday Victor Okoromi</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +18,7 @@
   </head>
   <body>
     <header>
-      <span>WDD 131 – Dynamic Web Fundamentals</span>
+      <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
       <nav>
         <ul>
           <li>
@@ -30,7 +31,7 @@
               >Scripture</a
             >
           </li>
-          <li><a href="">Project</a></li>
+          <li><a href="https://kingvics.github.io/wdd131/project.html">Project</a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +39,7 @@
       <h1>Sunday V. Okoromi</h1>
       <div class="grid">
         <section class="card">
-          <header class="card-header">About Me</header>
+          <h2 class="card-header">About Me</h2>
 
           <div class="about-grid">
             <p>
@@ -73,7 +74,7 @@
         </section>
 
         <section class="card">
-          <header class="card-header">Web Dev Resources</header>
+          <h2 class="card-header">Web Dev Resources</h2>
 
           <ul>
             <li><a href="#">Dev.to Community</a></li>
