--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This is a intro to Sunday Victor Okoromi WDD 131 - Dynamic Web Fundamentals journey
-    to becoming a software developer through BYU Pathway"
+      content="This is an introduction to media query"
     />
     <meta name="author" content="Sunday Victor Okoromi" />
     <link rel="stylesheet" href="./styles/media-query.css" />
@@ -17,7 +16,40 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Media Query Example</title>
+    <!-- <script>
+      console.log('hello');
+      const DAYS = 6;
+      const LIMIT = 30;
+      let studentReport = [11, 42, 33, 64, 29, 37, 44];
+
+      let value = 0;
+
+      for (let i = 0; i < studentReport.length; i++) {
+        if (studentReport[i] < 30) {
+          console.log(studentReport[i]);
+        }
+      }
+
+      studentReport.forEach((item) => {
+        if (item < 30) {
+          console.log(item);
+        }
+      });
+
+      for (let i in studentReport) {
+        if (studentReport[i] < 30) {
+          console.log(studentReport[i]);
+        }
+      }
+
+      while (value < studentReport.length) {
+        if (studentReport[value] < 30) {
+          console.log(studentReport[value]);
+        }
+        value++;
+      }
+    </script> -->
   </head>
   <body>
     <header>
