--- a/temples.html
+++ b/temples.html
@@ -46,45 +46,45 @@
       <h1 id="heading"></h1>
       <section class="grid">
         <figure>
-          <img src="/images/aba-nigeria-temple.jpg" alt="Aba Nigeria Temple" />
+          <img src="images/aba-nigeria-temple.jpg" alt="Aba Nigeria Temple" />
           <figcaption>Aba Nigeria Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/accra-ghana-temple.jpg" alt="Accra Ghana Temple" />
+          <img src="images/accra-ghana-temple.jpg" alt="Accra Ghana Temple" />
           <figcaption>Accra Ghana Temple</figcaption>
         </figure>
         <figure>
           <img
-            src="/images/adelaide-australia-temple.jpg"
+            src="images/adelaide-australia-temple.jpg"
             alt="Adelaide Temple"
           />
           <figcaption>Adelaide Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/anchorage-temple.jpg" alt="Anchorage Temple" />
+          <img src="images/anchorage-temple.jpg" alt="Anchorage Temple" />
           <figcaption>Anchorage Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/apia-samoa-temple.jpg" alt="Apia Samoa Temple" />
+          <img src="images/apia-samoa-temple.jpg" alt="Apia Samoa Temple" />
           <figcaption>Apia Samoa Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/p-temple.jpeg" alt="Paraguay Temple" />
+          <img src="images/p-temple.jpeg" alt="Paraguay Temple" />
           <figcaption>Adelaide Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/3-Boise-Idaho-Temple.jpg" alt="Idaho Temple" />
+          <img src="images/3-Boise-Idaho-Temple.jpg" alt="Idaho Temple" />
           <figcaption>Idaho Temple</figcaption>
         </figure>
         <figure>
           <img
-            src="/images/08-Billings-Montana-Temple.jpg"
+            src="images/08-Billings-Montana-Temple.jpg"
             alt="Billing Montana Temple"
           />
           <figcaption>Billing Montana Temple</figcaption>
         </figure>
         <figure>
-          <img src="/images/boston-temple-lds-945541.jpg" alt="Boston Temple" />
+          <img src="images/boston-temple-lds-945541.jpg" alt="Boston Temple" />
           <figcaption>Boston Temple</figcaption>
         </figure>
       </section>
