--- a/temples.html
+++ b/temples.html
@@ -80,13 +80,13 @@
         </figure>
         <figure>
           <img
-            src="images/Billings-Montana-Temple.jpg"
+            src="images/billings-montana-temple.jpg"
             alt="Billing Montana Temple"
           />
           <figcaption>Billing Montana Temple</figcaption>
         </figure>
         <figure>
-          <img src="images/boston-temple-lds-945541.jpg" alt="Boston Temple" />
+          <img src="images/boston-temple.jpg" alt="Boston Temple" />
           <figcaption>Boston Temple</figcaption>
         </figure>
       </section>
