--- a/temples.html
+++ b/temples.html
@@ -75,18 +75,18 @@
           <figcaption>Adelaide Temple</figcaption>
         </figure>
         <figure>
-          <img src="images/Boise-Idaho-Temple.jpg" alt="Idaho Temple" />
+          <img src="images/boise-idaho-temple.jpg" alt="Idaho Temple" />
           <figcaption>Idaho Temple</figcaption>
         </figure>
         <figure>
           <img
             src="images/billings-montana-temple.jpg"
-            alt="Billing Montana Temple"
+            alt="billing montana temple"
           />
           <figcaption>Billing Montana Temple</figcaption>
         </figure>
         <figure>
-          <img src="images/boston-temple.jpg" alt="Boston Temple" />
+          <img src="images/boston-temple.jpg" alt="boston temple" />
           <figcaption>Boston Temple</figcaption>
         </figure>
       </section>
