--- a/temples.html
+++ b/temples.html
@@ -75,12 +75,12 @@
           <figcaption>Adelaide Temple</figcaption>
         </figure>
         <figure>
-          <img src="images/boise-idaho-temple.jpg" alt="Idaho Temple" />
+          <img src="images/boise-temple.jpg" alt="Idaho Temple" />
           <figcaption>Idaho Temple</figcaption>
         </figure>
         <figure>
           <img
-            src="images/billings-montana-temple.jpg"
+            src="images/billings-temple.jpg"
             alt="billing montana temple"
           />
           <figcaption>Billing Montana Temple</figcaption>
