--- a/place.html
+++ b/place.html
@@ -18,11 +18,11 @@
     />
     <link rel="stylesheet" href="styles/place.css" />
     <link rel="stylesheet" href="styles/place-large.css" />
-    <script src="scripts/place.js" defer></script>
     <title>Place</title>
+    <script src="scripts/place.js" defer></script>
   </head>
   <body>
-    <header>
+    <header class=" container">
       <h1>Nigeria</h1>
     </header>
     <div class="header-line"></div>
@@ -31,12 +31,12 @@
         <div class="hero">
           <picture>
             <source
-              srcset="images/animal_LG.webp"
+              srcset="images/animal_lg.webp"
               media="(min-width: 1000px)"
             />
-            <source srcset="images/animal_MD.webp" media="(min-width: 500px)" />
+            <source srcset="images/animal_md.webp" media="(min-width: 500px)" />
             <img
-              src="images/animal_SM.webp"
+              src="images/animal_sm.webp"
               alt="Animal in Nigeria"
               width="500"
               height="250"
@@ -60,7 +60,12 @@
         <div class="weather-widget">
           <div class="head">
             <h2>Weather</h2>
-            <img src="images/weather-svgrepo-com.svg" width="30" height="30" alt="Weather Icon" />
+            <img
+              src="images/weather-svgrepo-com.svg"
+              width="30"
+              height="30"
+              alt="Weather Icon"
+            />
           </div>
           <div class="body">
             <p>Temperature: <span>50</span></p>
@@ -71,7 +76,6 @@
         </div>
       </section>
     </main>
-    <div class="header-line"></div>
     <footer>
       <p>
         &copy; <span id="currentyear"></span> ⭐ Sunday Victor Okoromi ⭐ Lagos,
