--- a/place.html
+++ b/place.html
@@ -31,12 +31,12 @@
         <div class="hero">
           <picture>
             <source
-              srcset="images/animal_lg.webp"
+              srcset="images/animal-large.webp.webp"
               media="(min-width: 1000px)"
             />
-            <source srcset="images/animal_md.webp" media="(min-width: 500px)" />
+            <source srcset="images/animal-medium.webp" media="(min-width: 500px)" />
             <img
-              src="images/animal_sm.webp"
+              src="images/animal-small.webp"
               alt="Animal in Nigeria"
               width="500"
               height="250"
