--- a/place.html
+++ b/place.html
@@ -31,7 +31,7 @@
         <div class="hero">
           <picture>
             <source
-              srcset="images/animal-large.webp.webp"
+              srcset="images/animal-large.webp"
               media="(min-width: 1000px)"
             />
             <source srcset="images/animal-medium.webp" media="(min-width: 500px)" />
