--- a/place.html
+++ b/place.html
@@ -9,7 +9,9 @@
     to becoming a software developer through BYU Pathway"
     />
     <meta name="author" content="Sunday Victor Okoromi" />
-    <title>WDD 131 - Dynamic Web Fundamentals - Sunday Victor Okoromi</title>
+    <title>
+      WDD 131 - Dynamic Web Fundamentals - Sunday Victor Okoromi - Place
+    </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,11 +20,10 @@
     />
     <link rel="stylesheet" href="styles/place.css" />
     <link rel="stylesheet" href="styles/place-large.css" />
-    <title>Place</title>
     <script src="scripts/place.js" defer></script>
   </head>
   <body>
-    <header class=" container">
+    <header class="container">
       <h1>Nigeria</h1>
     </header>
     <div class="header-line"></div>
@@ -34,7 +35,10 @@
               srcset="images/animal-large.webp"
               media="(min-width: 1000px)"
             />
-            <source srcset="images/animal-medium.webp" media="(min-width: 500px)" />
+            <source
+              srcset="images/animal-medium.webp"
+              media="(min-width: 500px)"
+            />
             <img
               src="images/animal-small.webp"
               alt="Animal in Nigeria"
