--- a/place.html
+++ b/place.html
@@ -64,12 +64,17 @@
         <div class="weather-widget">
           <div class="head">
             <h2>Weather</h2>
-            <img
-              src="images/weather-svgrepo-com.svg"
-              width="30"
-              height="30"
-              alt="Weather Icon"
-            />
+            
+              <span class="emoticon"> 🌥️</span>
+            
+            <div class="svg-icon">
+              <img
+                src="images/weather-svgrepo-com.svg"
+                width="30"
+                height="30"
+                alt="Weather Icon"
+              />
+            </div>
           </div>
           <div class="body">
             <p>Temperature: <span>50</span></p>
