--- a/place.html
+++ b/place.html
@@ -63,9 +63,7 @@
         </div>
         <div class="weather-widget">
           <div class="head">
-            <h2>Weather</h2>
-            
-              <span class="emoticon"> 🌥️</span>
+            <h2>Weather <span class="emoticon">🌥️</span></h2>
             
             <div class="svg-icon">
               <img
