--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </nav>
-      <a href="" id="menu"></a>
+      <a href="#" id="menu"></a>
     </header>
     <main>
       <h1 id="heading"></h1>
