--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -42,11 +42,11 @@
           </li>
         </ul>
       </nav>
-      <a href="#" id="menu"></a>
+      <a href="#" id="menu" aria-label="mobile menu"></a>
     </header>
     <main>
       <h1 id="heading"></h1>
-      <section >
+      <section>
         <div id="temple-container"></div>
       </section>
     </main>
