added project template2

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Site Name Section -->
     <section>
-      <h1 style="color: #c62828">Site Name</h1>
+      <h1 >Site Name</h1>
       <p>
         <strong>LocalEats Delivery</strong>
       </p>
@@ -39,7 +39,7 @@
 
     <!-- Site Purpose Section -->
     <section>
-      <h2 style="color: #c62828">Site Purpose</h2>
+      <h2>Site Purpose</h2>
       <p>
         The purpose of the LocalEats Delivery website is to provide clear and
         accessible information about the food delivery service. The site will
@@ -53,7 +53,7 @@
 
     <!-- Scenarios Section -->
     <section>
-      <h2 style="color: #c62828">Scenarios</h2>
+      <h2>Scenarios</h2>
       <ul>
         <li>
           A customer asks:
@@ -70,16 +70,16 @@
 
     <!-- Color Schema Section -->
     <section>
-      <h2 style="color: #c62828">Color Schema</h2>
+      <h2>Color Schema</h2>
       <p>The following colors will be used throughout the website:</p>
       <ul>
         <li>
-          <strong style="color: #c62828">Red (#C62828):</strong>
+          <strong>Red (#C62828):</strong>
           Used for headings, navigation bar, buttons, and important
           call-to-action elements.
         </li>
         <li>
-          <strong style="color: #f9a825">Yellow (#F9A825):</strong>
+          <strong class="yellow">Yellow (#F9A825):</strong>
           Used for accent elements such as highlights, icons, and secondary
           buttons.
         </li>
@@ -90,7 +90,7 @@
 
     <!-- Typography Section -->
     <section>
-      <h2 style="color: #c62828">Typography</h2>
+      <h2 >Typography</h2>
       <ul>
         <li>
           <strong>Montserrat:</strong>
@@ -109,7 +109,7 @@
 
     <!-- Wireframes Section -->
     <section>
-      <h2 style="color: #c62828">Wireframes</h2>
+      <h2>Wireframes</h2>
 
       <div>
         <h3>Mobile View</h3>
