added project template5

--- a/week05/form.html
+++ b/week05/form.html
@@ -37,24 +37,24 @@
           <legend>Overall Rating</legend>
 
           <div class="stars">
-            <label>
-              <input type="radio" name="rating" value="1" required />
+            <label for="stars">
+              <input type="radio" name="rating" value="1" required id="stars" />
               <span>★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="2" />
+              <input type="radio" name="rating" value="2" id="stars" />
               <span>★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="3" />
+              <input type="radio" name="rating" value="3" id="stars" />
               <span>★★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="4" />
+              <input type="radio" name="rating" value="4" id="stars" />
               <span>★★★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="5" />
+              <input type="radio" name="rating" value="5" id="stars" />
               <span>★★★★★</span>
             </label>
           </div>
@@ -67,7 +67,7 @@
         <fieldset class="form-group">
           <legend>Useful Features</legend>
 
-          <label>
+          <label for="feature1">
             <input
               type="checkbox"
               id="feature1"
@@ -77,7 +77,7 @@
             Durability
           </label>
 
-          <label>
+          <label for="feature2">
             <input
               type="checkbox"
               id="feature2"
@@ -87,7 +87,7 @@
             Ease of Use
           </label>
 
-          <label>
+          <label for="feature3">
             <input
               type="checkbox"
               id="feature3"
@@ -97,7 +97,7 @@
             Performance
           </label>
 
-          <label>
+          <label for="feature4">
             <input
               type="checkbox"
               id="feature4"
