--- a/week05/form.html
+++ b/week05/form.html
@@ -42,19 +42,19 @@
               <span>★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="2" id="stars" />
+              <input type="radio" name="rating" value="2" id="stars" required />
               <span>★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="3" id="stars" />
+              <input type="radio" name="rating" value="3" id="stars" required />
               <span>★★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="4" id="stars" />
+              <input type="radio" name="rating" value="4" id="stars" required />
               <span>★★★★</span>
             </label>
             <label>
-              <input type="radio" name="rating" value="5" id="stars" />
+              <input type="radio" name="rating" value="5" id="stars" required />
               <span>★★★★★</span>
             </label>
           </div>
