--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/form.css" />
-    <script src="scripts/form.js" defer></script>
+    <link rel="stylesheet" href="./styles/form.css" />
+    <script src="./scripts/form.js" defer></script>
   </head>
   <body>
     <header>
