--- a/form.html
+++ b/form.html
@@ -41,20 +41,20 @@
               <input type="radio" name="rating" value="1" required id="stars" />
               <span>★</span>
             </label>
-            <label>
-              <input type="radio" name="rating" value="2" id="stars" required />
+            <label for="star2">
+              <input type="radio" name="rating" value="2" id="star2" required />
               <span>★★</span>
             </label>
-            <label>
-              <input type="radio" name="rating" value="3" id="stars" required />
+            <label for="star3">
+              <input type="radio" name="rating" value="3" id="star3" required />
               <span>★★★</span>
             </label>
-            <label>
-              <input type="radio" name="rating" value="4" id="stars" required />
+            <label for="star4">
+              <input type="radio" name="rating" value="4" id="star4" required />
               <span>★★★★</span>
             </label>
-            <label>
-              <input type="radio" name="rating" value="5" id="stars" required />
+            <label for="star5">
+              <input type="radio" name="rating" value="5" id="star5" required />
               <span>★★★★★</span>
             </label>
           </div>
