--- a/project/thank-you.html
+++ b/project/thank-you.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@600;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="LocaleEats Delivery is a fast food website that ensure you get your food within 10mins after order
+      This is a project built by Sunday Victor Okoromi WDD 131 - Dynamic Web Fundamentals journey
+    to becoming a software developer through BYU Pathway"
+    />
     <title>Thank You - LocalEats Delivery</title>
     <link rel="stylesheet" href="./styles/project.css" />
     <link rel="stylesheet" href="./styles/project-large.css" />
